--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     </script>
     <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=220961153285014&ev=PageView&noscript=1" /></noscript>
   <!-- End Facebook Pixel Code -->
+  <meta name="facebook-domain-verification" content="adfyhnl3n98cxhj3mwxr427dk7shtq" />
 </head>
 
 <body>
